--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,6 +31,9 @@
     <!-- Anime.js for 3D animations -->
     <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"></script>
 
+    <!-- Code copy button functionality -->
+    <script src="{{ "/js/code-copy.js" | relative_url }}" defer></script>
+
     <!-- Fonts -->
     {% if site.extended_fonts %}
     <link href='//fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap' rel='stylesheet' type='text/css'>
